--- a/Jump and Run/styles.css
+++ b/Jump and Run/styles.css
@@ -77,6 +77,17 @@ body {
     animation: moveObstacle 3s linear infinite;
 }
 
+#large-obstacle {
+    position: absolute;
+    bottom: 50px;
+    right: 0;
+    width: 50px;
+    height: 100px; /* Doppelt so groß wie die anderen Hindernisse */
+    background-color: darkblue;
+    border-radius: 5px;
+    animation: moveObstacle 3s linear infinite;
+}
+
 @keyframes moveObstacle {
     from {
         right: -50px;
