--- a/Jump and Run/styles.css
+++ b/Jump and Run/styles.css
@@ -22,7 +22,7 @@ body {
     height: 50px;
     background-color: red;
     border-radius: 5px;
-    transition: bottom 0.2s;
+    transition: bottom 0.1s;
 }
 
 .obstacle {
@@ -32,10 +32,6 @@ body {
     height: 50px;
     background-color: green;
     border-radius: 5px;
-}
-
-#obstacle-2 {
-    bottom: 150px; /* Schwebendes Hindernis */
 }
 
 #lives-container {
@@ -57,7 +53,7 @@ body {
     border-radius: 10px;
 }
 
-#restart-button {
+#restart-button, #menu-button {
     margin-top: 10px;
     padding: 10px 20px;
     font-size: 16px;
@@ -66,8 +62,9 @@ body {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    text-decoration: none;
 }
 
-#restart-button:hover {
+#restart-button:hover, #menu-button:hover {
     background-color: #0056b3;
 }
